Fixed API debug issues Hard coded paths Switch covers to Open Library Amended CSS

--- a/css/reccommend.css
+++ b/css/reccommend.css
@@ -71,7 +71,7 @@ padding: 10px;
 #searchWrapper {
         left: 25px;
 	height:32px;
-        width: 500px;
+        width: 300px;
 	position:relative;
 	border: 1px solid #CCCCCC;
          margin-bottom: 20px;
@@ -90,7 +90,7 @@ padding: 10px;
 #isbnInput{
        
         left: 0px;
-        width: 460px;
+        width: 260px;
 	height:22px;
 	padding-top: 5px;
 	padding-left: 5px;
@@ -112,7 +112,7 @@ padding: 10px;
 }
 
 #bigSubmit {
-	left:470px;
+	left:270px;
 	width:22px;
 	height:22px;
 	padding-right: 4px;
